objects/DRDW_Proj_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Duration__c</fullName>
        <description>Duration in days based on Planned Start Date</description>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Activity Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Flag_Comment__c</fullName>
        <label>Flag Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Activity_Flag_Status__c</fullName>
        <label>Activity Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Roadblock</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proj_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Type__c</fullName>
        <label>Activity Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Proj_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next SI Activity</label>
        <referenceTo>DRDW_Proj_Activity__c</referenceTo>
        <relationshipLabel>SI Activities (Next Capability Activity)</relationshipLabel>
        <relationshipName>Proj_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This activity is a sub activity of whatever parent activity you assign.</inlineHelpText>
        <label>Parent_Activity</label>
        <referenceTo>DRDW_Proj_Activity__c</referenceTo>
        <relationshipName>Project_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SI</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipLabel>SI Activities</relationshipLabel>
        <relationshipName>Proj_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Proj_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous SI Activity</label>
        <referenceTo>DRDW_Proj_Activity__c</referenceTo>
        <relationshipLabel>SI Activities (Previous Capability Activity)</relationshipLabel>
        <relationshipName>Proj_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On-going</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                    <isActive>false</isActive>
                    <label>Not Assigned</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                    <isActive>false</isActive>
                    <label>Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Explains type of link to Gantt Chart API.  0 = Finish to Start, 1 = Start to Start, 2 = Finish to Finish, 3 = Start to Finish</description>
        <inlineHelpText>Explains type of link to Gantt Chart API.  0 = Finish to Start, 1 = Start to Start, 2 = Finish to Finish, 3 = Start to Finish</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SI Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Project__c</columns>
        <columns>Status__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Delayed__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>Activity_Flag_Status__c</columns>
        <columns>Percent_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>Activity List</label>
    </listViews>
    <nameField>
        <label>SI Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SI Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Dates_cannot_be_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Start_Date__c  &gt; Today() ,  End_Date__c  &gt; Today() )</errorConditionFormula>
        <errorMessage>Actual Dates cannot be in future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Start_Date_and_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>Actual End Date cannot be prior to Actual Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_and_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Planned_Start_Date__c  &gt;  Planned_End_Date__c</errorConditionFormula>
        <errorMessage>Planned End Date cannot be prior to Planned Start Date</errorMessage>
    </validationRules>
</CustomObject>